--- a/hello-world/src/main/resources/application.yml
+++ b/hello-world/src/main/resources/application.yml
@@ -22,3 +22,5 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://peer1:8000/eureka/,http://peer2:8001/eureka/
+
+value: ${SECURITY_KEY:testConfig}
