--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,10 @@
         <module>ribbon-consumer</module>
         <module>feign-consumer</module>
         <module>zuul-service</module>
-        <module>oauth-server</module>
         <module>security-server</module>
+        <module>springboot-security</module>
+        <module>auth-service</module>
+        <module>service-hi</module>
     </modules>
     <packaging>pom</packaging>
 
